# sqldantic

./: .gitignore  README.md  pyproject.toml
scripts/: format  generate_field_py.py  lint
sqldantic/: __init__.py  field.py  main.py  orm.py  sqltypes.py  typemap.py  typing_extra.py
tests/: conftest.py  models.py  test_annotations.py  test_declarative_base.py  test_example.py  test_features.py  test_future_annotations.py  test_main.py  test_sqldantic.py  test_sqltypes.py
