[tool.poetry]
name = "sqldantic"
version = "0.2.0"
description = "sqlalchemy and pydantic integration."
authors = ["Andrey Churin <aachurin@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/aachurin/sqldantic"
repository = "https://github.com/aachurin/sqldantic"
license = "Unlicense"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.3"
sqlalchemy = "^2.0.26"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
mypy = "^1.8.0"
isort = "^5.13.2"
ipython = "^8.22.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
psycopg = {extras = ["binary"], version = "^3.1.18"}

[tool.black]
line-length = 104

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "^tests/.*",
    "^alembic/.*"
]

[tool.isort]
profile = "black"
skip_glob = ["alembic/*"]
line_length = 104

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
